name:                  websocket-server
version:               0.1.0.0
-- synopsis:
-- description:
license:               MIT
-- license-file:          LICENSE
author:                maque
-- maintainer:
-- copyright:
category:              Game
build-type:            Simple
extra-source-files:    README.md
cabal-version:         >=1.10

executable server
  main-is:             server.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.7 && <4.8, network, bytestring, text
  -- hs-source-dirs:
  default-language:    Haskell2010

executable client
  main-is:             client.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.7 && <4.8, network, bytestring, text
  -- hs-source-dirs:
  default-language:    Haskell2010
