name:                  websocket-server
version:               0.1.0.0
-- synopsis:
-- description:
license:               MIT
-- license-file:          LICENSE
author:                maque
-- maintainer:
-- copyright:
category:              Game
build-type:            Simple
extra-source-files:    README.md
cabal-version:         >=1.10


executable server
  main-is:             Server.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.8 && <4.9,
                       network,
                       binary,
                       bytestring,
                       zlib > 0.6,
                       text,
                       logic-prototype == 0.1.0.0,
                       containers,
                       string-conversions >= 0.4,
                       stm

  hs-source-dirs:      src
  default-language:    Haskell2010

executable client
  main-is:             Client.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.8 && <4.9, network, binary,bytestring, zlib > 0.6, text, logic-prototype == 0.1.0.0, containers, string-conversions >= 0.4
  hs-source-dirs:      src
  default-language:    Haskell2010
